feat: добавляет новые ручки в документацию сваггера
